[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Anton Sol <AntonSol919@gmail.com>"]
license = "MPL-2.0"
homepage = "https://www.linkspace.dev"
documentation = "https://www.linkspace.dev/docs/guide/index.html"
repository = "https://github.com/AntonSol919/linkspace"

[workspace]
resolver = "2"
members = [
    "crates/*",
    "cli/*",
    "ffi/*",
    "examples/mineweeper-rs"
]
exclude = [
        "ffi/linkspace-js", # wasm-pack target config is poorly supported - so its done as an individual crate.
        "cli/tree",
        "cli/impex",
        "crates/bloomhash",
        "crates/adota"
]

[workspace.dependencies]

anyhow = "=1.0.71"
arrayvec = "=0.7.2  "
serde = "=1.0.160"
hex = "=0.4.3"
base64 ="=0.21.0"
tracing = {version = "=0.1.37",features=["release_max_level_info"]}
tracing-subscriber = "=0.3.17"
thiserror =  "=1.0.40"
rand = "=0.8.5"
rand_core = "=0.6.4"
clap = "=4.3.4"
futures = "=0.3.28"
either = "=1.8.1"
static_assertions = "=1.1.0"
auto_impl = "=1.0.1"
bytes = "=1.1.0"
bitflags = "=1.3.2"
blake3 = "=1.3.1"
libc = "=0.2.142"
bstr = {version = "1.5.0" ,default-features=false}
build-info = { version = "=0.0.31"}
build-info-build = { version = "=0.0.31"}

[profile.dev.package.linkspace-argon2-identity]
opt-level = 3
[profile.dev.package.linkspace-cryptography]
opt-level = 3
[profile.dev.package.linkspace-pkt]
opt-level = 3


[profile.release]
lto = true