[workspace.package]
version = "0.3.1-rc1"
edition = "2021"
authors = ["Anton Sol <AntonSol919@gmail.com>"]
license = "MPL-2.0"
homepage = "https://www.linkspace.dev"
documentation = "https://www.linkspace.dev/docs/guide/index.html"
repository = "https://github.com/AntonSol919/linkspace"

[workspace]
resolver = "2"
members = [
    "crates/*",
    "cli/*",
    "ffi/*",
]
exclude = [
        "ffi/linkspace-js", # wasm-pack target config is poorly supported - so js is build as an individual crate.
        # some WIP crates
        "cli/tree", 
        "cli/impex",
        "crates/bloomhash",
        "crates/adota"
]

[workspace.dependencies]

anyhow = "=1.0.71"
arrayvec = "=0.7.2  "
serde = "=1.0.160"
hex = "=0.4.3"
base64 ="=0.21"
tracing = {version = "=0.1.37",features=["release_max_level_info"]}
tracing-subscriber = "=0.3.17"
thiserror =  "=1.0.40"
rand = "=0.8.5"
rand_core = "=0.6.4"
clap = "=4.3.4"
futures = "=0.3.28"
either = "=1.8.1"
static_assertions = "=1.1.0"
auto_impl = "=1.0.1"
bytes = "=1.1.0"
bitflags = "=1.3.2"
blake3 = "=1.3.1"
bstr = {version = "1.5.0" ,default-features=false}
vergen = "=8.2.4"
smallvec = {version="1.10.0",features=["const_new","const_generics","write"]}

libc = "0.2.147"
memmap2 = "0.7.1"
nix = "0.26.2"


[profile.dev.package.linkspace-argon2-identity]
opt-level = 3
[profile.dev.package.linkspace-cryptography]
opt-level = 3
[profile.dev.package.linkspace-pkt]
opt-level = 3


[profile.dev]
opt-level = 1   # Use slightly better optimizations.
[profile.release]
debug-assertions = true
overflow-checks = true 
lto = true