[package]
name = "linkspace-handshake"
version = "0.1.0"
edition = "2021"

homepage = "https://antonsol919.github.io/linkspace/"
documentation = "https://antonsol919.github.io/linkspace/docs/guide/index.html"
authors = ["Azon <AntonSol919@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/AntonSol919/linkspace"
categories = ["command-line-utilities","database","network-programming","asynchronous"]
keywords = ["linkspace", "supernet"]
description = "a stdio implementation for a linkspace handshake"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

liblinkspace = { path = "../../crates/liblinkspace"}
linkspace-common = { path = "../../crates/common" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
