[package]
name = "linkspace-handshake"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

categories = ["command-line-utilities","database","network-programming","asynchronous"]
keywords = ["linkspace", "supernet"]
description = "a stdio implementation for a linkspace handshake"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

linkspace = { path = "../../crates/linkspace"}
linkspace-common = { path = "../../crates/common" }
tracing-subscriber = {workspace=true,features=["env-filter"]}
