[package]
name = "linkspace-impex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace=true
clap = { version = "4.1.11", features = ["derive"] }

linkspace = { path = "../../crates/linkspace"}
linkspace-common = { path = "../../crates/common" }
tracing-subscriber.workspace = true
