[package]
name = "linkspace-cli"
version = "0.1.4"
edition = "2021"

homepage = "https://antonsol919.github.io/linkspace/"
documentation = "https://antonsol919.github.io/linkspace/docs/guide/index.html"
authors = ["Azon <AntonSol919@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/AntonSol919/linkspace"
categories = ["command-line-utilities","database","network-programming","asynchronous"]
keywords = ["linkspace", "supernet"]
description = "'lk' - the linkspace cli"

[[bin]]
name = "lk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
linkspace = { path = "../../crates/linkspace" , version ="0.1.4"}
linkspace-common = { path = "../../crates/common" , version="0.1.0"}
serde_json = "1.0.82"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }