[package]
name = "linkspace-cli"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

categories = ["command-line-utilities","database","network-programming","asynchronous"]
keywords = ["linkspace", "supernet"]
description = "'lk' - the linkspace cli"

[[bin]]
name = "lk"
path = "src/main.rs"

[dependencies]
linkspace = { path = "../../crates/linkspace" , version ="0.3.0"}
linkspace-common = { path = "../../crates/common" , version="0.3.0"}

tracing = {workspace=true}
tracing-subscriber = {workspace=true,features=["env-filter"]}
anyhow.workspace=true

serde_json = "1.0.82"
memmap2 = "0.6.2"
crossbeam-channel = "0.5.8"
either.workspace = true
build-info.workspace = true

[build-dependencies]
build-info-build.workspace =true

