[package]
name = "linkspace-cli"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

categories = ["command-line-utilities","database","network-programming","asynchronous"]
keywords = ["linkspace", "event-driven","distributed","log"]
description = "lk - the linkspace cli"
build = "build.rs"

[[bin]]
name = "lk"
path = "src/main.rs"

[dependencies]
linkspace = { path = "../../crates/linkspace" , version ="0.5.0"}
linkspace-common = { path = "../../crates/common" , version="0.5.0"}

tracing = {workspace=true}
tracing-subscriber = {workspace=true,features=["env-filter"]}
anyhow.workspace=true

serde_json = "1.0.82"
memmap2.workspace = true
crossbeam-channel = "0.5.8"
either.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["git", "gitcl", "rustc"] }


