[package]
name = "linkspace-lns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

linkspace-common = { path = "../../crates/common" }
liblinkspace = { path = "../../crates/liblinkspace"}
rand = "0.8.5"
rand_chacha = "0.3.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
