[package]
name = "linkspace-lns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

linkspace-common = { path = "../../crates/common" }
linkspace = { path = "../../crates/linkspace"}
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
