[package]
name = "linkspace-lns"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

linkspace-common = { path = "../../crates/common" }
linkspace = { path = "../../crates/linkspace"}
tracing-subscriber = {workspace=true,features=["env-filter"]}