[package]
name = "abe"
version = "0.1.0"
license = "MPL-2.0"
authors = ["anton sol <antonsol919@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
hex = "0.4.3"
serde = { version = "1.0.139", features = ["derive"] }