[package]

name = "abe"
version = "0.4.0"
authors = ["Anton Sol <AntonSol919@gmail.com>"]
categories = ["encoding","parsing"]
keywords = ["ascii-byte-expr", "ascii-byte","abe"]
description = "Ascii-byte-expression : a tiny byte templating language"

edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace=true
serde={workspace=true,features=["derive"]}
thiserror.workspace = true
arrayvec.workspace = true
hex.workspace = true
base64.workspace=true
bstr.workspace = true
