[package]
name = "linkspace-argon2-identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
linkspace-crypto = { path = "../crypto"}
rust-argon2 = { path = "./rust-argon2"}
thiserror = "1.0.31"
base64 = "0.13.0"
