[package]
name = "linkspace-argon2-identity"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
homepage = "https://antonsol919.github.io/linkspace/"
documentation = "https://antonsol919.github.io/linkspace/docs/guide/index.html"
authors = ["Azon <AntonSol919@gmail.com>"]
repository = "https://github.com/AntonSol919/linkspace"
categories = []
keywords = []
description = "argon2 encrypted schnorr keys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
linkspace-cryptography = { path = "../cryptography", version="0.1.0"}
rust-argon2 = "1.0.0"
thiserror = "1.0.31"
base64 = "0.13.0"
