[package]
name = "bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
[dependencies]

tracing = "0.1.35"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fslock = {version="0.2.1"}
socket2 = { version = "0.4.4", features = ["all"]}
nix = "0.24.1"
libc = "0.2"
event-listener = "2.5.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3.21"
