[package]
name = "bytefmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

abe = { path = "../abe"}
serde = { version = "1.0.139", features = ["derive"] }
base64 = "0.13.0"
tracing = "0.1.35"
serde_bytes = "0.11.6"
bstr = "1.0.1"
ruint = "1.7.0"

[dev-dependencies]
serde_json = "1.0.82"
