[package]
name = "linkspace-common"
categories = []
keywords = ["linkspace"]
description = "linkspace common"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full", "lmdb"]
lmdb=["linkspace-core/lmdb"]
inmem=["linkspace-core/inmem"]
fs=["memmap2", "notify"]
cli=["clap", "clap/env", "clap/derive", "rpassword"]
full=["fs", "cli"]

[dependencies]
abe = { path = "../abe", version = "0.2.0"}
byte-fmt = { path = "../byte-fmt", version = "0.2.0"}
linkspace-pkt = { path = "../pkt", version = "0.2.0"}
linkspace-core= { path = "../core",default-features=false, version = "0.2.0"}
linkspace-argon2-identity = { path = "../argon2-identity", version = "0.2.0"}

anyhow={workspace=true}
serde={workspace=true,features=["derive"]}
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
rand.workspace= true
clap = { workspace=true, features = ["derive"], optional = true }
futures.workspace = true
either.workspace=true

memmap2 = { version = "0.5.5", optional = true }
notify = { version = "5.0", optional = true }
rpassword = { version = "7.1" , optional = true }
async_executors = { version = "0.6.0", features = ["timer","async_global","bindgen","localpool"] }

[dev-dependencies]
    rand_chacha = "0.3.1"

