[package]
name = "linkspace-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=["keygen"]
keygen =["rand"]

[dependencies]
blake3 = { version = "1.3.1", features = ["traits-preview"] }
k256 = "0.11"
rand = { version = "0.8.5", optional = true }
rand_core = "0.6.4"
thiserror = "1.0.31"



[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
