[package]
name = "linkspace-cryptography"
description = "Blake3 and schnorr cryptographic primitives for linkspace"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

blake3 = { workspace = true, features = ["traits-preview"] }
k256 = {version="0.13.1",features=["schnorr"]}
rand.workspace = true
rand_core.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ["js"] }

[dev-dependencies]
rand_chacha = "0.3.1"

