[package]
name = "ipcbus"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Anton Sol <AntonSol919@gmail.com>"]
repository = "https://github.com/AntonSol919/linkspace"
categories = []
keywords = []
description = "Cross platform IPC bus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
[dependencies]

tracing.workspace = true
libc.workspace = true

socket2 = { version = "0.4.4", features = ["all"]}
nix = "0.24.1"
event-listener = "2.5.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3.21"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fslock = {version="0.2.1"}
