[package]
name = "ipcbus"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Anton Sol <AntonSol919@gmail.com>"]
repository = "https://github.com/AntonSol919/linkspace"
categories = []
keywords = []
description = "Cross platform IPC bus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
inotify = ["nix/inotify","memmap2"]
[dependencies]

tracing.workspace = true
anyhow.workspace =true

socket2 = { version = "0.5.3", features = ["all"]}
event-listener = "2.5.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures.workspace=true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fslock = {version="0.2.1"}
libc.workspace = true

nix = {workspace=true,features=["socket"]}
memmap2 = {optional=true,workspace=true}
