[package]
name = "liblinkspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unstable = []

[dependencies]
anyhow = "1.0.69"
backtrace = "0.3.67"
bitflags = "1.3.2"
const-str = "0.5.3"
linkspace-common = { path = "../common"}
tracing = "0.1.37"
