[package]
name = "liblinkspace"
version = "0.1.0"
edition = "2021"
authors = ["Az <AntonSol919@gmail.com>"]
license = "MPL-2.0"
homepage = "https://antonsol919.github.io/linkspace/"
documentation = "https://antonsol919.github.io/linkspace/docs/guide/index.html"
repository = "https://github.com/AntonSol919/linkspace"
categories = ["database","network-programming","asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
anyhow = "1.0.69"
backtrace = "0.3.67"
linkspace-common = { path = "../common"}
tracing = "0.1.37"
