[package]
name = "linkspace"
version = "0.3.0"
edition = "2021"
authors = ["Anton Sol <AntonSol919@gmail.com>"]
license = "MPL-2.0"
homepage = "https://antonsol919.github.io/linkspace/"
documentation = "https://antonsol919.github.io/linkspace/docs/guide/index.html"
repository = "https://github.com/AntonSol919/linkspace"
categories = ["database","network-programming","asynchronous"]
keywords = ["linkspace", "supernet"]
description = "linkspace - a general purpose supernet"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full", "lmdb"]
lmdb=["linkspace-common/lmdb"]
full = ["linkspace-common/full"]


[dependencies]
anyhow.workspace=true
backtrace = "0.3.67"
linkspace-common = { path = "../common", version = "0.3.0", default-features = false}
tracing.workspace = true
