[package]
name = "linkspace-pkt"
categories = []
keywords = ["linkspace"]
description = "Library for reading and writing linkspace packets"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
linkspace-cryptography = { path ="../cryptography", version = "0.2.0"}
byte-fmt = { path = "../byte-fmt" , version = "0.2.0"}

serde.workspace = true
thiserror.workspace = true
arrayvec.workspace=true
anyhow.workspace=true
static_assertions.workspace=true
auto_impl.workspace=true
bytes.workspace=true
bitflags.workspace=true

triomphe = { version = "0.1.8", path ="../../libs/triomphe"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.80"

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0.82"
