[package]
name = "linkspace-pkt"
categories = []
keywords = ["linkspace"]
description = "Library for reading and writing linkspace packets"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[features]
default = ["abe"]
abe = []
[dependencies]
linkspace-cryptography = { path ="../cryptography", version = "0.4.0"}
byte-fmt = { path = "../byte-fmt" , version = "0.4.0"}

serde.workspace = true
thiserror.workspace = true
arrayvec.workspace=true
anyhow.workspace=true
static_assertions.workspace=true
auto_impl.workspace=true
bytes.workspace=true
bstr.workspace=true
bitflags.workspace=true


triomphe = { version = "0.1.8", git = "https://github.com/AntonSol919/triomphe"}
serde_bytes = "0.11.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.80"

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0.82"


[build-dependencies]
vergen = { version="8", features = ["git", "gitcl", "rustc"]}

