[package]
name = "mineweeper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hotseat"
path = "src/bin/hotseat.rs"

[dependencies]
anyhow.workspace = true
linkspace = { path = "../../crates/linkspace"}
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.96"
