[package]
name = "lkpy"
version = "0.1.0"
edition = "2021"

[lib]
name = "lkpy"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.69"
liblinkspace = { path = "../../crates/liblinkspace"}
pyo3 = { version = "0.18.1", features = ["extension-module","anyhow"] }
smallvec = {version="1.10.0",features=["const_new","const_generics","write"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
