[package]
name = "linkspace-js"
version = "0.2.0"
edition = "2021"
authors = ["Anton Sol <AntonSol919@gmail.com>"]
license = "MPL-2.0"
homepage = "https://antonsol919.github.io/linkspace/index.html"
documentation = "https://antonsol919.github.io/linkspace/docs/guide/index.html"
repository = "https://github.com/AntonSol919/linkspace"

[lib]
name = "linkspace"
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[features]
default = ["console_error_panic_hook","wee_alloc"]
abe = []

[dependencies]
wasm-bindgen = "0.2.86"
linkspace-pkt = { path = "../../../linkspace/crates/pkt" , default-features = false}
linkspace-argon2-identity = { path = "../../../linkspace/crates/argon2-identity"}
web-sys ={ version = "0.3.63",features=["console","TextDecoder"]}
js-sys = "0.3.63"
console_error_panic_hook = { version = "0.1.1", optional = true }

wee_alloc = { version = "0.4.2", optional = true }
base64 = { version="*", default-features = false}
blake3 = "*"

#[profile.release]
#lto = true
#codegen-units = 1
#panic = "abort"
#opt-level="z"
