[package]
name = "linkspace-js"
version = "0.4.0"
edition = "2021"
authors = ["Anton Sol <AntonSol919@gmail.com>"]
license = "MPL-2.0"
homepage = "https://www.linkspace.dev"
documentation = "https://www.linkspace.dev/guide/index.html"
repository = "https://github.com/AntonSol919/linkspace"
description = "js bindings for linkspace"
build = "build.rs"

[lib]
name = "linkspace"
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[features]
default = ["console_error_panic_hook","wee_alloc"]
abe = []

[dependencies]
wasm-bindgen = "0.2.87"
linkspace = { path = "../../crates/linkspace", default-features = false}
linkspace-pkt = { path = "../../../linkspace/crates/pkt" , default-features = false}
linkspace-argon2-identity = { path = "../../../linkspace/crates/argon2-identity"}
web-sys ={ version = "0.3.63",features=["console","TextDecoder"]}
js-sys = "0.3.63"
console_error_panic_hook = { version = "0.1.1", optional = true }

wee_alloc = { version = "0.4.2", optional = true }
# Hopefully picks up the linkspace workspace versions - (-js is excluded from the workspace because profiles are poorly supported)
base64 = { version="*", default-features = false}
blake3 = "*"
[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl", "rustc"] }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level="z"
# [package.metadata.wasm-pack.profile.dev]
# wasm-opt = false

# [package.metadata.wasm-pack.profile.profiling]
# wasm-opt = false

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false
