[package]
name = "linkspace-py"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
name = "linkspace"
crate-type = ["cdylib"]

[dependencies]
linkspace = { path = "../../crates/linkspace", version ="0.3.0-rc1"}

smallvec.workspace =true
anyhow.workspace=true
tracing.workspace = true
tracing-subscriber = {workspace=true,features=["env-filter"]}

pyo3 = { version = "0.18.2", features = ["extension-module","anyhow","abi3","serde","abi3-py38"]  }