[package]
name = "imageboard-rs-egui"
version = "0.1.0"
authors = ["Anton Sol <AntonSol919@gmail.com>"]
edition = "2021"


[dependencies]
imageboard-rs = { path = "../imageboard"}
egui = "0.20.0"
egui_extras = { version="0.20.0" , features = ["image","svg"]}
image = { version = "0.24", features = ["jpeg", "png"] }
eframe = { version = "0.20.0", default-features = false, features = [
#    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#    "persistence",   # Enable restoring app state when restarting the app.
] }


# You only need serde if you want app persistence:
#serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

